--- a/orc8r/cloud/deploy/bare-metal-ansible/roles/magma/elasticsearch/defaults/main.yml
+++ b/orc8r/cloud/deploy/bare-metal-ansible/roles/magma/elasticsearch/defaults/main.yml
@@ -1,6 +1,7 @@
 magma_namespace: magma
 charts_dir: /etc/orc8r/charts
 elasticsearch_keep_days: 7
+elasticsearch_image_tag: 7.12.0
 orc8r_domain: magma.local
 storage_class: nfs
 
