--- a/orc8r/cloud/deploy/bare-metal/secrets/orc8r-configs.yaml
+++ b/orc8r/cloud/deploy/bare-metal/secrets/orc8r-configs.yaml
@@ -14,5 +14,5 @@ stringData:
     prometheusPushAddresses:
       - "http://orc8r-prometheus-cache:9091/metrics"
   elastic.yml: |
-    elasticHost: elasticsearch-client
+    elasticHost: elasticsearch-master
     elasticPort: 9200
