--- a/lte/gateway/configs/templates/mme.conf.template
+++ b/lte/gateway/configs/templates/mme.conf.template
@@ -106,6 +106,17 @@ MME :
         {% endfor %}
     );
 
+    # List of blocked IMEIs
+    # By default this list is empty
+    # Max number of blocked IMEI is 10
+    # Length of IMEI=15 digits, length of IMEISV=16 digits
+    BLOCKED_IMEI_LIST = (
+        # Sample IMEI: TAC(8 digits) + SNR (6 digits)
+        #{ TAC="99000482"; SNR="351037"}
+        # Sample IMEI without SNR: TAC(8 digits)
+        #{ TAC="99000482";}
+    );
+
     CSFB :
     {
         NON_EPS_SERVICE_CONTROL = "{{ non_eps_service_control }}";
