--- a/.github/workflows/c-cpp-static-analysis.yml
+++ b/.github/workflows/c-cpp-static-analysis.yml
@@ -1,3 +1,4 @@
+---
 #######
 # This pipeline runs various static analysis (e.g. GCC warnings) against the c / c++ pull requests.
 #
@@ -7,14 +8,15 @@
 #   - Option: by use of Workflow Templates per gcc-build-target (need to move docker build to another workflow and requires container repo)
 #   - Option: by improving our build system and enabling faster build-all-targets
 #######
-name: "GCC Warnings & Errors"
-on:
+name: "C/C++ Static Analysis"
+on:  # yamllint disable-line rule:truthy
   pull_request:
     types:
       - opened
       - reopened
       - synchronize
     paths:
+      - .github/workflows/c-cpp-static-analysis.yml
       - lte/gateway/c/**
       - orc8r/gateway/c/**
 
@@ -35,9 +37,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+          key: ${{ runner.os }}-buildx
       - 
         name: Docker Build
         id: docker_build
@@ -83,13 +83,13 @@ jobs:
         with:
           format: 'space-delimited'
       -
-        name: Download docker image from generate_container_for_build
+        name: Fetch build_container Artifact
         uses: actions/download-artifact@v2
         with:
           name: build_container
           path: /tmp
       -
-        name: Load Docker image
+        name: Load build_container into Docker
         run: |
           docker load --input /tmp/mme_builder.tar
           docker image ls -a
@@ -109,7 +109,7 @@ jobs:
         with:
           image: magma/mme_builder:latest
           # TODO: Remove work-around mount of Github workspace to /magma (https://github.com/addnab/docker-run-action/issues/11)
-          options: -v ${{ github.workspace }}:/magma -e ABC=123
+          options: -v ${{ github.workspace }}:/magma
           run: |
             cd /magma/lte/gateway/
             CPPFLAGS="-Wextra -Wshadow -Wimplicit-fallthrough -Wduplicated-cond -Wduplicated-branches -Wlogical-op -Wnull-dereference -Wjump-misses-init -Wformat=2 -Wstrict-overflow=4 -Wuninitialized -Wshift-overflow=2" make build_oai 2>&1 > /magma/compile.log
@@ -143,13 +143,13 @@ jobs:
         with:
           format: 'space-delimited'
       -
-        name: Download docker image from generate_container_for_build
+        name: Fetch build_container Artifact
         uses: actions/download-artifact@v2
         with:
           name: build_container
           path: /tmp
       -
-        name: Load Docker image
+        name: Load build_container into Docker
         run: |
           docker load --input /tmp/mme_builder.tar
           docker image ls -a
@@ -169,7 +169,7 @@ jobs:
         with:
           image: magma/mme_builder:latest
           # TODO: Remove work-around mount of Github workspace to /magma (https://github.com/addnab/docker-run-action/issues/11)
-          options: -v ${{ github.workspace }}:/magma -e ABC=123
+          options: -v ${{ github.workspace }}:/magma
           run: |
             cd /magma/lte/gateway/
             CPPFLAGS="-Wextra -Wshadow -Wimplicit-fallthrough -Wduplicated-cond -Wduplicated-branches -Wlogical-op -Wnull-dereference -Wjump-misses-init -Wformat=2 -Wstrict-overflow=4 -Wuninitialized -Wshift-overflow=2" make build_session_manager 2>&1 > /magma/compile.log
@@ -184,3 +184,48 @@ jobs:
         with:
           name: build_logs_session_manager
           path: ${{ github.workspace }}/compile.log      
+
+  clang_tidy_oai:
+    runs-on: ubuntu-latest
+    needs: gen_build_container
+    steps:
+      -
+        # This is necessary for overlays into the Docker container below.
+        name: Check Out Repo
+        uses: actions/checkout@v2
+      -
+        name: Fetch build_container Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: build_container
+          path: /tmp
+      -
+        name: Load build_container into Docker
+        run: |
+          docker load --input /tmp/mme_builder.tar
+          docker image ls -a
+      -
+        name: Capture git diff  # To allow clang-tidy to run only on diff
+        run: |
+          git diff -U0 HEAD^ > ${{ github.workspace }}/git.diff
+          cat ${{ github.workspace }}/git.diff
+      -
+        name: Run Clang-Tidy
+        uses: addnab/docker-run-action@v2
+        with:
+          image: magma/mme_builder:latest
+          options: -v ${{ github.workspace }}:/magma
+          # Build first to generate compile_commands.json, needed by clang-tidy.
+          run: |
+            cd /magma/lte/gateway/
+            make build_oai 2>&1 > /dev/null
+            wget https://raw.githubusercontent.com/llvm-mirror/clang-tools-extra/master/clang-tidy/tool/clang-tidy-diff.py
+            chmod +x clang-tidy-diff.py
+            cat /magma/git.diff | clang-tidy-diff -p1 -path /build/c/oai/ -j 4 -checks='-*,clang-analyzer-security*,android-*,cert-*,clang-analyzer-*,concurrency,misc-*,-misc-unused-parameters,bugprone-*' | xo '/\/magma\/((.*):(\d+):(\d+):\s+(?:fatal\s)?(warning|error):\s+(.*))/$1/' | tee /magma/clang_findings.log
+      -
+        name: Push findings via reviewdog
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.github_token }}
+        run: |
+          curl -sfL https://raw.githubusercontent.com/reviewdog/reviewdog/master/install.sh | sh -s
+          cat ${{ github.workspace }}/clang_findings.log | reviewdog -efm="%f:%l:%c: %m" -diff="git diff FETCH_HEAD" -reporter "github-pr-review" -name "clang-tidy" -l "warning" -tee
