Setup dev stuff for py lint
Signed-off-by: Marie Bremner <marwhal@fb.com>

--- a/orc8r/tools/ansible/roles/python_dev/tasks/main.yml
+++ b/orc8r/tools/ansible/roles/python_dev/tasks/main.yml
@@ -94,6 +94,7 @@
       - protobuf-compiler
       - python-protobuf
       - libsystemd-dev
+      - isort=5.8.0
 
 - name: Install python build requirements for Debian systems
   retries: 5
