Generate final config file
Signed-off-by: Ulas Kozat <kozat@fb.com>

--- a/lte/gateway/configs/templates/mme.conf.template
+++ b/lte/gateway/configs/templates/mme.conf.template
@@ -108,13 +108,20 @@ MME :
 
     # List of blocked IMEIs
     # By default this list is empty
-    # Max number of blocked IMEI is 10
+    # Stored in a hash table on mme side
     # Length of IMEI=15 digits, length of IMEISV=16 digits
     BLOCKED_IMEI_LIST = (
         # Sample IMEI: TAC(8 digits) + SNR (6 digits)
-        #{ TAC="99000482"; SNR="351037"}
+        #{ IMEI_TAC="99000482"; SNR="351037"}
         # Sample IMEI without SNR: TAC(8 digits)
-        #{ TAC="99000482";}
+        #{ IMEI_TAC="99000482";}
+        # ImeiConfig values can be found at magma/lte/protos/mconfig/mconfigs.proto
+        {% for imei_config in restrictedImeis -%}
+        {
+          IMEI_TAC   = "{{ imei_config.tac }}"
+          SNR        = "{{ imei_config.snr }}"
+        }{% if not loop.last %},{% endif %}
+        {% endfor %}
     );
 
     CSFB :
