Ignore more lint warnings
Signed-off-by: Marie Bremner <marwhal@fb.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,10 @@
 ignore = 
     WPS115, # Found upper-case constant in a class
     WPS318, # Found extra indentation
-    WPS319  # Found bracket in wrong position
+    WPS319, # Found bracket in wrong position
+    WPS504, # Found negated condition
+    Q000,   # Remove bad quotes
+    WPS110  # Found wrong variable name
 
 [isort]
 profile=wemake
