[feg] add lint target and to circleci
Signed-off-by: Oriol Batalla <obatalla@fb.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -660,6 +660,11 @@ jobs:
          command: go mod download
          workdir: ${MAGMA_ROOT}/cwf/gateway
       - run:
+          name: GO lint code
+          command: |
+            cd ${MAGMA_ROOT}/feg/gateway
+            make -C ${MAGMA_ROOT}/feg/gateway lint
+      - run:
           name: Generate test coverage
           command: |
             cd ${MAGMA_ROOT}/feg/gateway
