--- a/lte/gateway/configs/liagentd.yml
+++ b/lte/gateway/configs/liagentd.yml
@@ -22,5 +22,5 @@ pkt_src_mac: "99:11:44:31:ff:ff"
 
 proxy_addr: "127.0.0.1"
 proxy_port: 5555
-cert_file: "/tmp/example.crt"
-key_file: "/tmp/example.key"
+cert_file: "/tmp/domain.crt"
+key_file: "/tmp/domain.key"
