AGW: deploy envoy from magma repo. (#5745)
Repo URL: https://getenvoy.io/gpg is not reliable, Use
package cached in magma repo.

Signed-off-by: Pravin B Shelar <pbshelar@fb.com>

--- a/lte/gateway/deploy/roles/magma/tasks/main.yml
+++ b/lte/gateway/deploy/roles/magma/tasks/main.yml
@@ -262,6 +262,7 @@
       - ntpdate
       # For call tracing
       - tshark
+      - getenvoy-envoy
 
 - name: Install debian Magma dependencies
   retries: 5
