--- a/orc8r/cloud/helm/orc8r/values.yaml
+++ b/orc8r/cloud/helm/orc8r/values.yaml
@@ -238,6 +238,7 @@ dispatcher:
 eventd:
   service:
     labels:
+      orc8r.io/obsidian_handlers: "true"
       orc8r.io/swagger_spec: "true"
     annotations:
       orc8r.io/obsidian_handlers_path_prefixes: >
