[docusaurus] Add help message to delete node_modules in case of error
Signed-off-by: Oriol Batalla <obatalla@fb.com>

--- a/docs/docusaurus/docker-compose.yml
+++ b/docs/docusaurus/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3.7"
 services:
   docusaurus:
     volumes:
-      - $PWD/../docusaurus:/app/website
-      - $PWD/../readmes:/app/docs
+      - ./../docusaurus:/app/website
+      - ./../readmes:/app/docs
     ports:
       - 3000:3000/tcp
       - 35729:35729/tcp
