fixed compilation issues
Signed-off-by: hkshiv1 <shivakumar.hk@acldigital.com>

--- a/lte/gateway/c/oai/tasks/nas5g/CMakeLists.txt
+++ b/lte/gateway/c/oai/tasks/nas5g/CMakeLists.txt
@@ -37,6 +37,9 @@ set(libnas_src_OBJS
 	${CMAKE_CURRENT_SOURCE_DIR}/src/SmfMessage.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/M5GULNASTransport.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/M5GDLNASTransport.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/M5GServiceRequest.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/M5GServiceAccept.cpp
+
     )
 
 set(libnas_ies_OBJS
@@ -71,6 +74,7 @@ set(libnas_ies_OBJS
 	${CMAKE_CURRENT_SOURCE_DIR}/src/ies/M5GMMCause.cpp        
 	${CMAKE_CURRENT_SOURCE_DIR}/src/ies/M5GIMEISVRequest.cpp   
 	${CMAKE_CURRENT_SOURCE_DIR}/src/ies/M5GDNN.cpp   
+	${CMAKE_CURRENT_SOURCE_DIR}/src/ies/M5GServiceType.cpp
     )
 
 add_library(LIB_NAS5G
