[orc8r][helm] Refactor orc8r chart with cert-manager (#5584)
Signed-off-by: Shubham Tatvamasi <shubhamtatvamasi@gmail.com>

--- a/orc8r/cloud/helm/orc8r/values.yaml
+++ b/orc8r/cloud/helm/orc8r/values.yaml
@@ -52,6 +52,12 @@ secret:
     orc8r: orc8r-secrets-configs-orc8r
   envdir: orc8r-secrets-envdir
 
+# certs sub-chart configuration.
+certs:
+  create: false
+
+  domainName: localhost
+
 nginx:
   create: true
 
