--- a/lte/gateway/docker/mme/Dockerfile.ubuntu20.04
+++ b/lte/gateway/docker/mme/Dockerfile.ubuntu20.04
@@ -97,22 +97,22 @@ RUN ["/bin/bash", "-c", "if [[ -v GIT_PROXY ]]; then git config --global http.pr
 #  see https://gist.github.com/electronjoe/a899e4bfbc2904cb353444386296c38e
 # Note the CFLAGS define below due to glibc deprecation of critical flag,
 #  see https://github.com/rdslw/openwrt/blob/e5d47f32131849a69a9267de51a30d6be1f0d0ac/tools/bison/patches/110-glibc-change-work-around.patch
-RUN wget https://ftp.gnu.org/gnu/nettle/nettle-2.5.tar.gz && \
+RUN wget --progress=dot:giga https://ftp.gnu.org/gnu/nettle/nettle-2.5.tar.gz && \
     tar -xf nettle-2.5.tar.gz && \
     cd nettle-2.5 && \
     mkdir build && \
     cd build/ && \
     ../configure --disable-openssl --enable-shared --libdir=/usr/local/lib && \
-    make -j`nproc` && \
+    make -j"$(nproc)" && \
     make install && \
     ldconfig -v && \
     cd / && \
-    wget http://mirrors.dotsrc.org/gcrypt/gnutls/v3.1/gnutls-3.1.23.tar.xz && \
+    wget --progress=dot:giga http://mirrors.dotsrc.org/gcrypt/gnutls/v3.1/gnutls-3.1.23.tar.xz && \
     tar xf gnutls-3.1.23.tar.xz && \
     cd gnutls-3.1.23 && \
     mkdir build && cd build && \
     CFLAGS=-D_IO_ftrylockfile ../configure --with-libnettle-prefix=/usr/local && \
-    make -j`nproc` && \
+    make -j"$(nproc)" && \
     make install && \
     ldconfig -v && \
     cd / && \
@@ -128,7 +128,7 @@ RUN git clone --recurse-submodules -b v1.35.0 https://github.com/grpc/grpc && \
     mkdir -p cmake/build && \
     cd cmake/build && \
     cmake -DgRPC_INSTALL=ON -DgRPC_BUILD_TESTS=OFF -DBUILD_SHARED_LIBS=ON ../.. && \
-    make -j`nproc` && \
+    make -j"$(nproc)" && \
     make install && \
     cd / && \
     rm -rf grpc
@@ -141,7 +141,7 @@ RUN git clone https://github.com/jupp0r/prometheus-cpp.git && \
     mkdir _build && \
     cd _build/ && \
     cmake .. && \
-    make -j`nproc` && \
+    make -j"$(nproc)" && \
     make install && \
     rm -rf /prometheus-cpp
 
@@ -152,16 +152,16 @@ RUN git clone https://github.com/cpp-redis/cpp_redis.git && \
     git submodule init && git submodule update && \
     mkdir build && cd build && \
     cmake .. -DCMAKE_BUILD_TYPE=Release && \
-    make -j`nproc` && \
+    make -j"$(nproc)" && \
     make install && \
     rm -rf /cpp_redis
 
 ##### liblfds
 # https://www.liblfds.org/mediawiki/index.php?title=r7.1.0:Building_Guide_(liblfds)
-RUN wget https://liblfds.org/downloads/liblfds%20release%207.1.0%20source.tar.bz2  && \
+RUN wget --progress=dot:giga https://liblfds.org/downloads/liblfds%20release%207.1.0%20source.tar.bz2  && \
     tar -xf liblfds\ release\ 7.1.0\ source.tar.bz2  && \
     cd liblfds/liblfds7.1.0/liblfds710/build/gcc_gnumake/ && \
-    make -j`nproc` && \
+    make -j"$(nproc)" && \
     make ar_install && \
     cd / && \
     rm -rf liblfds
@@ -173,7 +173,7 @@ RUN git clone https://git.osmocom.org/libgtpnl && \
     git reset --hard 345d687 && \
     autoreconf -fi && \
     ./configure && \
-    make -j`nproc` && \
+    make -j"$(nproc)" && \
     make install && \
     ldconfig && \
     cd / && \
@@ -185,7 +185,7 @@ RUN git clone https://gitlab.eurecom.fr/oai/asn1c.git && \
     git checkout f12568d617dbf48497588f8e227d70388fa217c9 && \
     autoreconf -iv && \
     ./configure && \
-    make -j`nproc` && \
+    make -j"$(nproc)" && \
     make install && \
     ldconfig
 
@@ -193,7 +193,7 @@ RUN git clone https://gitlab.eurecom.fr/oai/asn1c.git && \
 RUN git clone https://github.com/fmtlib/fmt.git && cd fmt && \
     mkdir _build && cd _build && \
     cmake -DBUILD_SHARED_LIBS=ON .. && \
-    make -j$(nproc) && \
+    make -j"$(nproc)" && \
     make install && \
     cd / && \
     rm -rf fmt
@@ -206,7 +206,7 @@ RUN git clone https://github.com/facebook/folly && cd folly && \
     git checkout tags/v2021.02.15.00 && \
     mkdir _build && cd _build && \
     cmake -DBUILD_SHARED_LIBS=ON .. && \
-    make -j$(nproc) && \
+    make -j"$(nproc)" && \
     make install && \
     cd / && \
     rm -rf folly
@@ -228,7 +228,7 @@ RUN git clone --branch v4.3 https://github.com/mfontanini/libtins.git && \
     mkdir build && \
     cd build && \
     cmake ../ -DLIBTINS_ENABLE_CXX11=1 && \
-    make -j`nproc` && \
+    make -j"$(nproc)" && \
     make install && \
     cd / && \
     rm -rf libtins
@@ -261,7 +261,7 @@ RUN git clone https://github.com/OPENAIRINTERFACE/opencord.org.freeDiameter.git 
     mkdir build && \
     cd build && \
     cmake -DDISABLE_SCTP:BOOL=ON ../ && \
-    make -j`nproc` && \
+    make -j"$(nproc)" && \
     make install && \
     cd / && \
     rm -rf freediameter
