Fix per-file lint suppression config
Signed-off-by: Marie Bremner <marwhal@fb.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,8 +39,9 @@ ignore =
     D400   # First line should end with a period
 
 per-file-ignores =
-    lte/gateway/python/integ_tests/s1aptests/*: WPS118, # Found too long name  
-                                                WPS219  # Found too deep access level
+    lte/gateway/python/integ_tests/s1aptests/*.py: WPS118, WPS219
+# WPS118: Found too deep access level
+# WPS219: Found too long name 
 
 [isort]
 profile=wemake
