--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -937,8 +937,11 @@ jobs:
           deploy: 'False'
 
   lte-agw-deploy:
+      enviroment: AWS_ACCESS_KEY_ID=“$AWS_FB_CRED”
+                AWS_SECRET_ACCESS_KEY=“$AWS_FB_SECRET”
     machine:
-      image: ubuntu-1604:201903-01
+#      image: ubuntu-1604:201903-01
+      image: ami-0e7b52505c766bf98
     steps:
       - build/determinator:
           <<: *lte_build_verify
@@ -950,6 +953,11 @@ jobs:
       - notify-magma:
           artifact_name: LTE AGW
           version_path: versions/magma_version
+      - run:
+          name: aruns playbooks 
+            command:|
+              ansible-playbook ami-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "aminode=tag_Name_buildAgw" -u admin
+              ansible-playbook ami-init.yaml
 
   ## CWF OPERATOR
 
