--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -937,7 +937,7 @@ jobs:
           deploy: 'False'
 
   lte-agw-deploy:
-    enviroment: |
+    enviroment:
                 AWS_ACCESS_KEY_ID: '$AWS_FB_CRED'
                 AWS_SECRET_ACCESS_KEY: '$AWS_FB_SECRET'
     machine:
