--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -953,25 +953,15 @@ jobs:
 
   lte-agw-aws:
     environment:
-                AWS_ACCESS_KEY_ID: '$AWS_FB_CRED'
-                AWS_SECRET_ACCESS_KEY: '$AWS_FB_SECRET'
+      AWS_ACCESS_KEY_ID: "$AWS_FB_CRED"
+      AWS_SECRET_ACCESS_KEY: "$AWS_FB_SECRET"
     machine:
       image: ami-0e7b52505c766bf98
     steps:
-      - build/determinator:
-          <<: *lte_build_verify
-      - magma_integ_test:
-          stack: lte
-          test: 'False'
-          build: 'True'
-          deploy: 'True'
-      - notify-magma:
-          artifact_name: LTE AGW
-          version_path: versions/magma_version
       - run:
-            command:|
-              ansible-playbook ami-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "aminode=tag_Name_buildAgw" -u admin
-              ansible-playbook ami-init.yaml
+          command: |
+            ansible-playbook ami-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "aminode=tag_Name_buildAgw" -u admin
+            ansible-playbook ami-init.yaml
       - magma_slack_notify
 
   ## CWF OPERATOR
@@ -1061,7 +1051,7 @@ jobs:
           command: yarn run eslint ./
       - magma_slack_notify
 
-nms-yarn-test:
+  nms-yarn-test:
     executor: node
     steps:
       - checkout
@@ -1257,125 +1247,125 @@ nms-yarn-test:
 workflows:
   version: 2.1
 
-  cloud:
-    jobs:
-      - insync-checkin
-      - cloud_lint
-      - cloud-test
-      - orc8r-build:
-          requires:
-            - insync-checkin
-            - cloud_lint
-            - cloud-test
-
-  lib_gateway:
-    jobs:
-      - orc8r-gateway-test
+  # cloud:
+  #   jobs:
+  #     - insync-checkin
+  #     - cloud_lint
+  #     - cloud-test
+  #     - orc8r-build:
+  #         requires:
+  #           - insync-checkin
+  #           - cloud_lint
+  #           - cloud-test
+  #
+  # lib_gateway:
+  #   jobs:
+  #     - orc8r-gateway-test
 
   agw:
     jobs:
-      - lte-test
-      - session_manager_test
-      - mme_test
-      - mme-clang-tidy:
-          <<: *only_master
-      - mme-clang-warnings:
-          <<: *only_master
-      - lte-integ-test:
-          <<: *master_and_develop
-      - lte-agw-deploy:
-          <<: *only_master
-          requires:
-            - lte-test
-            - mme_test
-            - lte-integ-test
-      - lte-agw-aws:
-          <<: *only_master
-          requires:
-            - lte-test
-            - mme_test
-            - lte-integ-test
-      
-      - c-cpp-codecov
+      # - lte-test
+      # - session_manager_test
+      # - mme_test
+      # - mme-clang-tidy:
+      #     <<: *only_master
+      # - mme-clang-warnings:
+      #     <<: *only_master
+      # - lte-integ-test:
+      #     <<: *master_and_develop
+      # - lte-agw-deploy:
+      #     <<: *only_master
+      #     requires:
+      #       - lte-test
+      #       - mme_test
+      #       - lte-integ-test
+      - lte-agw-aws
+      #     <<: *only_master
+      #     requires:
+      #       - lte-test
+      #       - mme_test
+      #       - lte-integ-test
+      #
+      # - c-cpp-codecov
 
-  feg:
-    jobs:
-      - feg-lint
-      - feg-precommit
-      - feg-build:
-          requires:
-            - feg-precommit
-
-  cwag:
-    jobs:
-      - cwag-precommit
-      - cwf-integ-test:
-          <<: *master_and_develop
-      - xwfm-test:
-          <<: *master_and_develop
-      - cwag-deploy:
-          <<: *only_master
-          requires:
-            - cwag-precommit
-            - cwf-integ-test
-      - xwfm-deploy:
-          <<: *only_master
-          name: xwfm-deploy-latest
-          requires:
-            - cwag-deploy
-            - xwfm-test
-          tag-latest: true
-      - cwag-deploy:
-          <<: *only_master
-          name: cwag-deploy-latest
-          requires:
-            - cwag-deploy
-            - xwfm-deploy-latest
-          images: 'gateway_python|gateway_pipelined|gateway_go'
-          tag-latest: true
-
-
-  cwf_operator:
-    jobs:
-      - cwf-operator-precommit
-      - cwf-operator-build:
-          requires:
-            - cwf-operator-precommit
-
-  hourly_xwfm:
-    triggers:
-      - schedule:
-          cron: "0 * * * *"
-          <<: *only_master
-    jobs:
-      - xwfm-test:
-          notify_magma_ci: false
-
-  nms:
-    jobs:
-      - nms-flow-test
-      - eslint
-      - nms-yarn-test:
-          requires:
-            - nms-flow-test
-      - nms-e2e-test:
-          requires:
-            - nms-flow-test
-            - eslint
-            - nms-yarn-test
-      - nms-build:
-          requires:
-            - nms-flow-test
-            - eslint
-            - nms-yarn-test
-            - nms-e2e-test
-
-  docusaurus:
-   jobs:
-    - docusaurus_build_and_deploy:
-        <<: *only_master
-
-  fossa:
-    jobs:
-      - fossa-analyze:
-          <<: *only_master
+  # feg:
+  #   jobs:
+  #     - feg-lint
+  #     - feg-precommit
+  #     - feg-build:
+  #         requires:
+  #           - feg-precommit
+  #
+  # cwag:
+  #   jobs:
+  #     - cwag-precommit
+  #     - cwf-integ-test:
+  #         <<: *master_and_develop
+  #     - xwfm-test:
+  #         <<: *master_and_develop
+  #     - cwag-deploy:
+  #         <<: *only_master
+  #         requires:
+  #           - cwag-precommit
+  #           - cwf-integ-test
+  #     - xwfm-deploy:
+  #         <<: *only_master
+  #         name: xwfm-deploy-latest
+  #         requires:
+  #           - cwag-deploy
+  #           - xwfm-test
+  #         tag-latest: true
+  #     - cwag-deploy:
+  #         <<: *only_master
+  #         name: cwag-deploy-latest
+  #         requires:
+  #           - cwag-deploy
+  #           - xwfm-deploy-latest
+  #         images: 'gateway_python|gateway_pipelined|gateway_go'
+  #         tag-latest: true
+  #
+  #
+  # cwf_operator:
+  #   jobs:
+  #     - cwf-operator-precommit
+  #     - cwf-operator-build:
+  #         requires:
+  #           - cwf-operator-precommit
+  #
+  # hourly_xwfm:
+  #   triggers:
+  #     - schedule:
+  #         cron: "0 * * * *"
+  #         <<: *only_master
+  #   jobs:
+  #     - xwfm-test:
+  #         notify_magma_ci: false
+  #
+  # nms:
+  #   jobs:
+  #     - nms-flow-test
+  #     - eslint
+  #     - nms-yarn-test:
+  #         requires:
+  #           - nms-flow-test
+  #     - nms-e2e-test:
+  #         requires:
+  #           - nms-flow-test
+  #           - eslint
+  #           - nms-yarn-test
+  #     - nms-build:
+  #         requires:
+  #           - nms-flow-test
+  #           - eslint
+  #           - nms-yarn-test
+  #           - nms-e2e-test
+  #
+  # docusaurus:
+  #  jobs:
+  #   - docusaurus_build_and_deploy:
+  #       <<: *only_master
+  #
+  # fossa:
+  #   jobs:
+  #     - fossa-analyze:
+  #         <<: *only_master
