--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -956,7 +956,7 @@ jobs:
       AWS_ACCESS_KEY_ID: "$AWS_FB_CRED"
       AWS_SECRET_ACCESS_KEY: "$AWS_FB_SECRET"
     machine:
-      image: ami-0e7b52505c766bf98
+      image: ubuntu-1604:201903-01
     steps:
       - run:
           command: |
