[5G: MVC][component: agw][type: enhancement][pipelined]Paging Functionality Support For 5G in pipelined.
Signed-off-by: prabina pattnaik <prabinak@wavelabs.ai>

--- a/lte/gateway/configs/pipelined.yml
+++ b/lte/gateway/configs/pipelined.yml
@@ -169,6 +169,7 @@ he_enabled: true
 ovs_multi_tunnel: False
 # Paging timeout value
 paging_timeout: 30
+classifier_controller_id: 5
 
 # Internal port for processing internal conntrack
 ovs_internal_conntrack_port_number: 15579
