--- a/.github/workflows/cpplint.yml
+++ b/.github/workflows/cpplint.yml
@@ -1,3 +1,4 @@
+---
 name: Reviewdog
 on:  # yamllint disable-line rule:truthy
   pull_request:
@@ -27,18 +28,20 @@ jobs:
   cpplint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - uses: reviewdog/action-cpplint@master
-      with:
-        github_token: ${{ secrets.github_token }}
-        filter: file
-        reporter: github-pr-review
-        flags: --linelength=120  # Optional
-        # filter: "-readability/braces\
-        #  ,-whitespace/braces\
-        #  ,-whitespace/comments\
-        #  ,-whitespace/indent\
-        #  ,-whitespace/newline\
-        #  ,-whitespace/operators\
-        #  ,-whitespace/parens\
-        #  "  # Optional
+      -
+        uses: actions/checkout@master
+      -
+        name: Install CPP Lint and ReviewDog
+        run: |
+          wget -O - -q https://raw.githubusercontent.com/reviewdog/reviewdog/master/install.sh \
+           | sh -s -- -b .
+          pip install cpplint
+      -
+        name: Run CPP Lint and push Annotations
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          cpplint --recursive ${{ github.workspace }} \
+            --extensions=hh,c,hpp,cpp,cuh,cc,cxx,c++,hxx,h,h++,cu \
+            --linelength=120 2>&1 \
+             | ./reviewdog -efm="%f:%l: %m" -filter-mode="file" -name="cpplint" -reporter="github-pr-review" -level="warning"
