--- a/lte/gateway/configs/control_proxy.yml
+++ b/lte/gateway/configs/control_proxy.yml
@@ -40,7 +40,6 @@ proxy_cloud_connections: True
 # Allows http_proxy usage if the environment variable is present
 allow_http_proxy: False
 
-# Dummy URL to Sentry logging -> Modify to local sentry instance in order
-# to pipe error handling to sentry
-sentry_url: ""
-sentry_sample_rate: 1.0
+# [Experimental] URL to enable Sentry logging
+# sentry_url: ""
+# entry_sample_rate: 1.0
