--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,10 @@ aliases:
     filters:
       branches:
         only: master
+  - &only_release
+    filters:
+      branches:
+        only: v*
   - &master_and_develop
     filters:
       branches:
@@ -1306,6 +1310,36 @@ workflows:
             - mme_test
             - lte-integ-test
       - c-cpp-codecov
+
+  release:
+    jobs:
+      - release-hold:
+          type: approval
+      - lte-agw-deploy:
+          <<: *only_release
+          requires:
+            - release-hold
+      - cwag-deploy:
+          <<: *only_release
+          requires:
+            - release-hold
+      - cwf-operator-build:
+          <<: *only_release
+          requires:
+            - release-hold
+      - feg-build:
+          <<: *only_release
+          requires:
+            - release-hold
+      - orc8r-build:
+          <<: *only_release
+          requires:
+            - release-hold
+      - nms-build:
+          <<: *only_release
+          requires:
+            - release-hold
+
 
   feg:
     jobs:
