--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -964,10 +964,9 @@ jobs:
   
       - run:
           command: |
-            cd ${MAGMA_ROOT}
-            ls experimental/cloudstrapper/playbooks
-            #/experimental/cloudstrapper/playbooks
             pip install ansible
+            cd ${MAGMA_ROOT}/experimental/cloudstrapper/playbooks
+            ls ~/magma-experimental/files
             ansible-playbook ami-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "aminode=tag_Name_buildAgw" -u admin
             ansible-playbook ami-init.yaml
       - magma_slack_notify
