--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -968,6 +968,7 @@ jobs:
             pip install ansible
             cd ${MAGMA_ROOT}/experimental/cloudstrapper/playbooks
             ansible-playbook build-provision.yaml --tags devopsAgw,inventory
+            ansible-playbook build-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "buildnode=tag_Name_buildAgw" -e "ansible_python_interpreter=/usr/bin/python3"
             ansible-playbook ami-configure.yaml -i ~/magma-experimental/files/common_instance_aws_ec2.yaml -e "aminode=tag_Name_buildAgw" -u admin
             ansible-playbook ami-init.yaml
       - magma_slack_notify
