--- a/experimental/cloudstrapper/playbooks/roles/vars/cluster.yaml
+++ b/experimental/cloudstrapper/playbooks/roles/vars/cluster.yaml
@@ -14,12 +14,11 @@ gitHelmRepo: helm14
 #AWS variables
 awsBootKey: "{{ keyBoot }}"
 awsHostKey: "{{ keyHost }}"
-awsAgwRegion: ap-northeast-1
-awsOrc8rRegion: ap-southeast-1
-awsAgwAz: ap-northeast-1a
-
+awsAgwRegion: us-west-1
+awsOrc8rRegion: us-west-1
+awsAgwAz: us-west-1
 #awsAgwAmi: ami-082cfa03978837a23
-awsAgwAmi: ami-0f568ae27c14ee6ea
+awsAgwAmi: ami-0e7b52505c766bf98
 
 #------------------
 #Cluster-specific Presets
