Decouple Orc8r verification from terraform state inspection. We currently depend on terraform state only for getting the namespace. Modified to obtain it from user option (with default as orc8r)
Enable orc8r cleanup without terraform state inspection.
Provide default values when not provided

Signed-off-by: Karthik Subraveti <ksubraveti@fb.com>

--- a/orc8r/cloud/deploy/orc8r_deployer/docker/root/scripts/playbooks/roles/deploy/vars/all.yml
+++ b/orc8r/cloud/deploy/orc8r_deployer/docker/root/scripts/playbooks/roles/deploy/vars/all.yml
@@ -7,8 +7,8 @@ ORC8R_DB_SUBNET_QUERY: "values.root_module.child_modules[*].resources[?address==
 NMS_DB_ID_QUERY: "values.root_module.child_modules[*].resources[?address=='module.orc8r.aws_db_instance.nms'].values.id"
 EFS_MOUNT_TARGET_ID_QUERY: "values.root_module.child_modules[*].resources[?type=='aws_efs_mount_target'].values.id"
 EFS_FILE_SYSTEM_ID_QUERY: "values.root_module.child_modules[*].resources[?type=='aws_efs_mount_target'].values.file_system_id"
-HOSTED_ZONE_QUERY: "values.root_module.child_modules[*].resources[?address=='module.orc8r.aws_route53_zone.orc8r'].values"
-VPC_QUERY: "values.root_module.child_modules[*].child_modules[*].resources[?type=='aws_vpc'].values"
+HOSTED_ZONE_QUERY: "values.root_module.child_modules[*].resources[?address=='module.orc8r.aws_route53_zone.orc8r'].values.name"
+VPC_QUERY: "values.root_module.child_modules[*].child_modules[*].resources[?type=='aws_vpc'].values.tags.Name"
 REGION_QUERY: "values.root_module.child_modules[*].resources[?type=='aws_availability_zones'].values.id"
 
 ORC8R_CERTS:
