--- a/orc8r/cloud/deploy/orc8r_deployer/docker/root/scripts/playbooks/roles/infra/aws/tasks/route53.yml
+++ b/orc8r/cloud/deploy/orc8r_deployer/docker/root/scripts/playbooks/roles/infra/aws/tasks/route53.yml
@@ -1,109 +1,44 @@
-- name: Get all txt resource record sets
-  community.aws.route53:
-    command: get
-    zone: "{{hosted_zone.name}}"
-    record: "{{item[0]}}.{{hosted_zone.name}}"
-    type: "TXT"
-  register: current_dns_records
-  ignore_errors: true
-  with_items:  ['bootstrapper-controller', 'controller', '*.nms', 'fluentd', 'api']
+- name: Get hosted zones for orc8r domain
+  ansible.builtin.shell: aws route53 list-hosted-zones-by-name --dns-name {{domain_name}}
+  when: domain_name
+  register: hosted_zone
   tags:
     - cleanup
     - cleanup_dryrun
 
-- name: Debug all txt resource record sets
-  debug: msg="{{current_dns_records}}"
-  tags:
-    - cleanup_dryrun
-    - cleanup
-
-# HACK - deleting a record fails due to some oddities in value. Hence
-# setting to a empty value and deleting it.
-- name: Change all txt resource record sets
-  community.aws.route53:
-    state: present
-    overwrite: true
-    zone: "{{ hosted_zone.name }}"
-    record: "{{item.item}}.{{hosted_zone.name}}"
-    ttl: "{{ item.set.ttl | default('300') }}"
-    type: "TXT"
-    value: "{{ value | to_json }}"
-    wait: yes
-  loop: "{{ current_dns_records.results }}"
-  ignore_errors: true
-  vars:
-    value: ""
-  tags: cleanup
-
-- name: Delete all txt resource record sets
-  community.aws.route53:
-    state: absent
-    overwrite: true
-    zone: "{{ hosted_zone.name }}"
-    record: "{{item.item}}.{{hosted_zone.name}}"
-    ttl: "{{ item.set.ttl | default('300') }}"
-    type: "TXT"
-    value: "{{ value | to_json }}"
-    wait: yes
-  vars:
-    value: ""
-  loop: "{{ current_dns_records.results }}"
-  ignore_errors: true
-  tags: cleanup
-
-- name: Get all alias resource record sets
-  community.aws.route53:
-    command: get
-    zone: "{{hosted_zone.name}}"
-    record: "{{item[0]}}.{{hosted_zone.name}}"
-    type: "A"
-  register: current_dns_records
-  ignore_errors: true
-  with_items:  ['bootstrapper-controller', 'controller', '*.nms', 'fluentd', 'api']
+- name: Get records in the hosted zone
+  ansible.builtin.shell: aws route53 list-resource-record-sets --hosted-zone {{(hosted_zone.stdout|from_json).HostedZones[0].Id}}
+  when: (hosted_zone.stdout|from_json).HostedZones
+  register: record_info
   tags:
     - cleanup
     - cleanup_dryrun
 
-- name: Debug all alias resource record sets
-  debug: msg="{{current_dns_records}}"
+- name: Create json changeset for route53 records
+  template:
+    src: 'delete_batch.json.j2'
+    dest: "{{ playbooks }}/delete_batch.json"
+  when: (hosted_zone.stdout|from_json).HostedZones
   tags:
+    - cleanup
     - cleanup_dryrun
+
+- name: Delete all resource record sets
+  ansible.builtin.shell: aws route53 change-resource-record-sets --hosted-zone  {{(hosted_zone.stdout|from_json).HostedZones[0].Id}} --change-batch "file://{{ playbooks }}/delete_batch.json"
+  ignore_errors: true
+  register: delete_result
+  tags:
     - cleanup
 
-# HACK - deleting a record fails due to some oddities in value. Hence
-# setting to a empty value and deleting it.
-- name: Change all alias resource record sets
-  community.aws.route53:
-    state: present
-    overwrite: true
-    zone: "{{ hosted_zone.name }}"
-    record: "{{item.item}}.{{hosted_zone.name}}"
-    ttl: "{{ item.set.ttl | default('300') }}"
-    type: "A"
-    value: 0.0.0.0
-    wait: yes
-  loop: "{{ current_dns_records.results }}"
-  ignore_errors: true
-  tags: cleanup
-
-- name: Delete all alias resource record sets
-  community.aws.route53:
-    state: absent
-    overwrite: true
-    zone: "{{ hosted_zone.name }}"
-    record: "{{item.item}}.{{hosted_zone.name}}"
-    ttl: "{{ item.set.ttl | default('300') }}"
-    type: "A"
-    value: 0.0.0.0
-    wait: yes
-  loop: "{{ current_dns_records.results }}"
-  ignore_errors: true
-  tags: cleanup
+- name: Sleep for a while before deleting hosted zone
+  pause:
+    minutes: 2
+  when: delete_result
+  tags:
+    - cleanup
 
 - name: Delete hosted zones for orc8r domain
-  community.aws.route53_zone:
-    zone: "{{hosted_zone.name}}"
-    hosted_zone_id: "{{hosted_zone.zone_id}}"
-    state: absent
+  ansible.builtin.shell: aws route53 delete-hosted-zone --id {{(hosted_zone.stdout|from_json).HostedZones[0].Id}}
+  when: (hosted_zone.stdout|from_json).HostedZones
   ignore_errors: true
   tags: cleanup
