--- a/orc8r/cloud/deploy/orc8r_deployer/docker/Dockerfile
+++ b/orc8r/cloud/deploy/orc8r_deployer/docker/Dockerfile
@@ -24,6 +24,7 @@ RUN apt-get update && \
 RUN pip3 install --no-cache-dir \
                         boto \
                         boto3 \
+                        kubernetes \
                         ansible==${ANSIBLE_VERSION} \
                         prettytable \
                         requests \
