--- a/orc8r/cloud/deploy/orc8r_deployer/docker/root/scripts/playbooks/roles/deploy/tasks/tf.yml
+++ b/orc8r/cloud/deploy/orc8r_deployer/docker/root/scripts/playbooks/roles/deploy/tasks/tf.yml
@@ -5,7 +5,6 @@
   tags:
     - install_precheck
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
@@ -17,7 +16,6 @@
   tags:
     - install_precheck
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
@@ -33,7 +31,6 @@
   tags:
     - install_precheck
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
@@ -46,7 +43,6 @@
     ]
   tags:
     - upgrade_precheck
-    - verify_sanity
 
 - name: Check if no resources are present in terraform state
   assert:
@@ -62,7 +58,6 @@
   ignore_errors: true
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
@@ -73,7 +68,6 @@
   ignore_errors: true
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
@@ -83,7 +77,6 @@
   ignore_errors: true
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
@@ -94,7 +87,6 @@
   when: orc8r_secrets is undefined
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
@@ -103,7 +95,6 @@
     msg: "orc8r_secrets : {{orc8r_secrets}}"
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
@@ -114,7 +105,6 @@
   when: orc8r_es_domain is undefined
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
@@ -123,7 +113,6 @@
     msg: "orc8r_es_domain : {{orc8r_es_domain}}"
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
@@ -134,7 +123,6 @@
   ignore_errors: true
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
@@ -143,7 +131,6 @@
     msg: "orc8r_cluster_name : {{orc8r_cluster_name}}"
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
@@ -154,7 +141,6 @@
   ignore_errors: true
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
@@ -163,17 +149,16 @@
     msg: "orc8r_db_id : {{orc8r_db_id}}"
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
 - name: Set orc8r db subnet
   set_fact:
     orc8r_db_subnet: "{{lookup('flattened', result.stdout | from_json | json_query(ORC8R_DB_SUBNET_QUERY))}}"
+  when: orc8r_db_subnet is undefined
   ignore_errors: true
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
@@ -182,7 +167,6 @@
     msg: "orc8r_db_subnet : {{orc8r_db_subnet}}"
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
@@ -193,7 +177,6 @@
   when: efs_mount_targets is undefined
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
@@ -202,7 +185,6 @@
     msg: "efs_mount_targets : {{efs_mount_targets}}"
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
@@ -213,7 +195,6 @@
   when: efs_fs_targets is undefined
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
@@ -222,47 +203,42 @@
     msg: "efs_fs_targets : {{efs_fs_targets}}"
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
 - name: Set vpc
   set_fact:
-    vpc: "{{lookup('flattened', result.stdout | from_json | json_query(VPC_QUERY))}}"
+    vpc_name: "{{lookup('flattened', result.stdout | from_json | json_query(VPC_QUERY))}}"
   ignore_errors: true
-  when: vpc is undefined
+  when: vpc_name is undefined
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
 - name: Debug vpc
   debug:
-    msg: "vpc : {{vpc}}"
+    msg: "vpc_name : {{vpc_name}}"
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
-- name: Set hosted zone
+- name: Set Domain Name
   set_fact:
-    hosted_zone: "{{lookup('flattened', result.stdout | from_json | json_query(HOSTED_ZONE_QUERY))}}"
+    domain_name: "{{lookup('flattened', result.stdout | from_json | json_query(HOSTED_ZONE_QUERY))}}"
   ignore_errors: true
-  when: hosted_zone is undefined
+  when: domain_name is undefined
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
 - name: Debug hosted zone
   debug:
-        msg: "hosted_zone : {{hosted_zone}}"
+        msg: "domain_name : {{domain_name}}"
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
@@ -273,7 +249,6 @@
   when: region_name is undefined
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
 
@@ -282,6 +257,5 @@
     msg: "region_name : {{region_name}}"
   tags:
     - upgrade_precheck
-    - verify_sanity
     - cleanup_dryrun
     - cleanup
