--- a/orc8r/cloud/deploy/orc8r_deployer/docker/root/scripts/playbooks/roles/infra/aws/tasks/elb.yml
+++ b/orc8r/cloud/deploy/orc8r_deployer/docker/root/scripts/playbooks/roles/infra/aws/tasks/elb.yml
@@ -1,6 +1,14 @@
+- name: locate VPC
+  ec2_vpc_net_info:
+    filters:
+      "tag:Name": "{{ vpc_name }}"
+  register: vpc_info
+  tags:
+    - cleanup_dryrun
+    - cleanup
+
 - name: Collect all elb information
-  ec2_elb_info:
-    region: "{{ region_name }}"
+  ansible.builtin.shell: aws elb describe-load-balancers
   register: elb_info
   ignore_errors: true
   when: region_name
@@ -8,26 +16,32 @@
     - cleanup_dryrun
     - cleanup
 
-- name: Debug elb information
+- name: Debug all elbs
   debug:
-    msg: "{{item}}"
+    msg:
+      - "{{item.LoadBalancerName}} from {{ region_name }} will be deleted"
+  when: region_name and vpc_info and item.VPCId == vpc_info.vpcs[0].id and elb_info
   ignore_errors: true
-  when: region_name and vpc and item.vpc_id == vpc.id
   with_items:
-    - "{{ elb_info.elbs }}"
+    - "{{ (elb_info.stdout | from_json).LoadBalancerDescriptions }}"
   tags:
     - cleanup_dryrun
     - cleanup
 
 - name: Delete all elbs
-  ec2_elb_lb:
-    state: absent
-    name: "{{ item.name }}"
-    region: "{{ region_name }}"
-    wait: yes
-  when: region_name and vpc and item.vpc_id == vpc.id
+  ansible.builtin.shell: aws elb delete-load-balancer --load-balancer-name {{item.LoadBalancerName}}
+  when: region_name and vpc_info and item.VPCId == vpc_info.vpcs[0].id and elb_info
   ignore_errors: true
   with_items:
-    - "{{ elb_info.elbs }}"
+    - "{{ (elb_info.stdout | from_json).LoadBalancerDescriptions }}"
+  tags:
+    - cleanup
+
+- name: Wait till all elbs are deleted
+  ansible.builtin.shell: aws elb wait instance-deregistered --load-balancer-name {{item.LoadBalancerName}}
+  when: region_name and vpc_info and item.VPCId == vpc_info.vpcs[0].id and elb_info
+  ignore_errors: true
+  with_items:
+    - "{{ (elb_info.stdout | from_json).LoadBalancerDescriptions }}"
   tags:
     - cleanup
