[orc8r][nprobe] update configuration
Signed-off-by: YOUSSEF EL MASMOUDI <ymasmoudi@fb.com>

--- a/lte/cloud/configs/nprobe.yml
+++ b/lte/cloud/configs/nprobe.yml
@@ -10,5 +10,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-updateIntervalSecs: 60
-backoffIntervalSecs: 360
+# update_interval_secs sets the priodic time between runs in seconds.
+# backoff_interval_secs sets the backoff time when remote records collector is not
+# available.
+update_interval_secs: 60
+backoff_interval_secs: 360
