[CI] only run release on v1.5
Signed-off-by: Timothée Dzik <timdzik@fb.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,8 @@ aliases:
   - &only_release
     filters:
       branches:
-        only: /v*/
+        only:
+          - /v*/
   - &master_and_develop
     filters:
       branches:
